footer and other chnages

--- a/src/footer.html
+++ b/src/footer.html
@@ -55,9 +55,9 @@
     <div class="middle-footer ">
       <div class="lft-footmenu m-footmenu footerAcc">
         <div class="ac m-footlist">
-          <h3 class="ac-header">
+          <div class="ac-header">
             <button type="button" class="ac-trigger">Domestic Resorts</button>
-          </h3>
+          </div>
           <div class="ac-panel">
             <div class="ac-text">
               <ul>
@@ -72,9 +72,9 @@
           </div>
         </div>
         <div class="ac m-footlist">
-          <h3 class="ac-header">
+          <div class="ac-header">
             <button type="button" class="ac-trigger">Investors</button>
-          </h3>
+          </div>
           <div class="ac-panel">
             <div class="ac-text">
               <ul>
@@ -89,9 +89,9 @@
           </div>
         </div>     
         <div class="ac m-footlist">
-          <h3 class="ac-header">
+          <div class="ac-header">
             <button type="button" class="ac-trigger">About Us</button>
-          </h3>
+          </div>
           <div class="ac-panel">
             <div class="ac-text">
               <ul>
@@ -105,9 +105,9 @@
           </div>     
         </div>     
         <div class="ac m-footlist">
-          <h3 class="ac-header">
+          <div class="ac-header">
             <button type="button" class="ac-trigger">Experiences</button>
-          </h3>
+          </div>
           <div class="ac-panel">
             <div class="ac-text">
               <ul>
@@ -121,9 +121,9 @@
           </div>     
         </div>     
         <div class="ac m-footlist">
-          <h3 class="ac-header">
+          <div class="ac-header">
             <button type="button" class="ac-trigger">More</button>
-          </h3>
+          </div>
           <div class="ac-panel">
             <div class="ac-text">
               <ul>
@@ -138,9 +138,9 @@
           </div>     
         </div>     
         <div class="ac m-footlist">
-          <h3 class="ac-header">
+          <div class="ac-header">
             <button type="button" class="ac-trigger">Magicstream</button>
-          </h3>
+          </div>
           <div class="ac-panel">
             <div class="ac-text">
               <ul>
@@ -155,9 +155,9 @@
           </div>     
         </div>     
         <div class="ac m-footlist">
-          <h3 class="ac-header">
+          <div class="ac-header">
             <button type="button" class="ac-trigger">Community</button>
-          </h3>
+          </div>
           <div class="ac-panel">
             <div class="ac-text">
               <ul>
@@ -170,9 +170,9 @@
           </div>      
         </div>      
         <div class="ac m-footlist">
-          <h3 class="ac-header">
+          <div class="ac-header">
             <button type="button" class="ac-trigger">Blog</button>
-          </h3>
+          </div>
           <div class="ac-panel">
             <div class="ac-text">
               <ul>
@@ -187,9 +187,9 @@
           </div>
         </div>      
         <div class="ac m-footlist">
-          <h3 class="ac-header">
+          <div class="ac-header">
             <button type="button" class="ac-trigger">Media</button>
-          </h3>
+          </div>
           <div class="ac-panel">
             <div class="ac-text">
               <ul>
@@ -204,9 +204,9 @@
           </div>      
         </div>      
         <div class="ac m-footlist">
-          <h3 class="ac-header">
+          <div class="ac-header">
             <button type="button" class="ac-trigger">Feedback</button>
-          </h3>
+          </div>
           <div class="ac-panel">
             <div class="ac-text">
               <ul>
@@ -221,9 +221,9 @@
       </div> <!-- //end lft-footmenu -->
       <div class="rgt-footmenu m-footmenu footerAccCon">
         <div class="ac m-footlist">
-          <h3 class="ac-header">
+          <div class="ac-header">
             <button type="button" class="ac-trigger">Contact Us</button>
-          </h3>
+          </div>
           <div class="ac-panel">
             <div class="ac-text">
           <ul>
@@ -435,7 +435,7 @@
 </div>
 <section id="mutiStepForm" class="popup-form">
   <div class="form-container">
-    <h2>Fill in the form below & we’ll reach out!</h2>
+    <div class="formttl">Fill in the form below & we’ll reach out!</div>
     <form class="form-content" id="popupFrom">
       <div class="col-input">
         <div class="control">
