--- a/src/header.html
+++ b/src/header.html
@@ -148,9 +148,9 @@
         </div> -->
         <div class="accordion-container ">
           <div class="ac">
-            <h2 class="ac-header">
+            <div class="ac-header">
               <button type="button" class="ac-trigger">Resorts</button>
-            </h2>
+            </div>
             <div class="ac-panel">
               <div class="menu-item mega_menu">
                 <div >
@@ -185,9 +185,9 @@
           </div>
           <a class="link nav-acc-link" href="https://www.clubmahindra.com/memberships">Membership</a>
           <div class="ac">
-            <h2 class="ac-header">
+            <div class="ac-header">
               <button type="button" class="ac-trigger">Experiences</button>
-            </h2>
+            </div>
             <div class="ac-panel">
               <div id="experienceHeaderMob" class="mega_menu">
                 <div class="col-12">
