--- a/src/footer.html
+++ b/src/footer.html
@@ -66,7 +66,7 @@
                   <li><a href="https://www.clubmahindra.com/resorts/resorts-in-daman-and-diu">Resort in Daman</a></li>
                   <li><a href="https://www.clubmahindra.com/resorts/resorts-in-himachal-pradesh">Resort in Himachal Pradesh</a></li>
                   <li><a href="https://www.clubmahindra.com/resorts/resorts-in-jammu-and-kashmir">Resort in Kashmir</a></li>
-                  <li><a href="https://www.clubmahindra.com/resorts">More</a></li>
+                  <li><a href="https://www.clubmahindra.com/resorts" class="moreLink">More</a></li>
               </ul>
             </div>
           </div>
