--- a/src/detail.html
+++ b/src/detail.html
@@ -422,7 +422,7 @@
                         <div class="time">1 hours 20 minutes</div>
                       </div>
                       <!-- Negative Cases -->
-                      <div class="negative-case">
+                      <!-- <div class="negative-case">
                         <p class="ttl">Negative Cases Dummy Title</p>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown </p>
 
@@ -441,7 +441,7 @@
                         <div class="distance">NA</div>
                         <div class="time">NA</div>
                       </div>
-                    </div>
+                    </div> -->
                     </div>
                   </div>
                     <!-- <img src="./img/map.webp" alt=""> -->
