--- a/src/detail.html
+++ b/src/detail.html
@@ -673,7 +673,7 @@
                   <button class="see-more" id="loadbtn-1">See More</button>
                 </div>
                 <div class="popular-routes">
-                  <h2 class="cb-title">Popular Routes to Pune</h2>
+                  <h2 class="cb-title">Popular Routes From Pune</h2>
                   <div class="di-grid rourtes">
                     <ul id="popular-route-2">
                     <li>
