For section 'How to Reach Mumbai to Pune' updated below files modified:   src/css/scss/pages/_detail.scss modified:   src/detail.html

--- a/src/detail.html
+++ b/src/detail.html
@@ -408,6 +408,11 @@
                       <h2 class="cb-title">How to Reach Mumbai to Pune</h2>
                      
                       <div class="di-grid reach-box">
+                        <div class="fromTo head-ttl"><b>Important Routes</b></div>
+                        <div class="distance head-ttl"><b>Distance</b></div>
+                        <div class="time head-ttl"><b>Time Taken</b></div>
+
+
                         <div class="fromTo"> <img src="./img/car.webp" alt="">Driving Distance:</div>
                         <div class="distance">159.73 km</div>
                         <div class="time">2 hours 59 minutes</div>
