--- a/src/footer.html
+++ b/src/footer.html
@@ -351,7 +351,7 @@
     </div>
   </div>
 </div>
-<button class="go-to-top gotoSection" data-to-section="playPopupYtVid">
+<button class="go-to-top gotoSection" style="display: none;">
   <img src="./img/component/icons8-chevron-up-50.png" alt="">
 </button>
 <div id="shareIconBtn" class="scroll-top">
